# libdebayer

./: .gitignore  README.md  flake.nix
benchmark/cpp/: CMakeLists.txt
benchmark/cpp/src/: test_debayer.cpp
benchmark/kodak/: download_kodak.sh
c/: CMakeLists.txt  libdebayer.pc.in
c/include/: debayer.h
c/src/: debayer.cu  debayer_kernel.cu  debayer_kernel.h
cpp/: CMakeLists.txt  libdebayercpp.pc.in
cpp/include/: debayer_cpp.h
cpp/src/: debayer_cpp.cu
cpu/: CMakeLists.txt  README.md  cpu_debayer.cpp  cpu_debayer.hpp  cpu_kernel.cpp  cpu_kernel.hpp  main.cpp  threadpool.cpp  threadpool.hpp
rust/: .gitignore  Cargo.toml
rust/examples/: test_benchmark.rs
rust/libdebayer-sys/: Cargo.toml  build.rs  wrapper.h
rust/libdebayer-sys/doc-headers/: cuda_runtime.h  libdebayer
rust/src/: lib.rs
