[package]
name = "libdebayer-sys"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
description = "unsafe sys crate to the libdebayer C library"
homepage = "https://github.com/saronic-technologies/libdebayer"
repository = "https://github.com/saronic-technologies/libdebayer/tree/main/rust/libdebayer-sys"
readme = "../../README.md"

[dependencies]

[build-dependencies]
anyhow = "1.0.86"
bindgen = "0.70.1"
pkg-config = "0.3.30"
